# Market_wizard

./: .gitignore  Dockerfile  Makefile  README.md  SESSION_NOTES.md  changelog.txt  run.sh  search_pdf.py  start.sh  stop.sh  technical_report.md
backend/: .env.example  .env.sample  pyproject.toml
backend/app/: config.py  i18n.py  main.py
backend/app/data/: __init__.py  gender_gap_calibration.json  reference_data.py  ssr_calibration_policy_default.json  ssr_calibrator_default.json
backend/app/models/: __init__.py  schemas.py
backend/app/routers/: __init__.py  projects.py  simulations.py
backend/app/services/: __init__.py  embedding_client.py  focus_group_engine.py  llm_client.py  persona_manager.py  product_extractor.py  project_store.py  report_generator.py  score_calibration.py  simulation_engine.py  ssr_engine.py
backend/scripts/: benchmark_kaggle.py  build_domain_calibration_policy.py  build_global_calibrator.py  build_poland_grouped_csv.py  calibrate_gender_gap.py  compare_llm_ssr.py  compare_ssr_embeddings.py  debug_price_sensitivity.py  diagnose_gus.py  evaluate_ssr_20_industries.py  evaluate_ssr_on_real_data.py  grounding_probe.py  ssr_grouped_ratings_template.csv  test_personas.py  tune_ssr_hierarchical.py  validate_grouped_ratings_csv.py  validate_production_readiness.py
backend/tests/: test_frontend_gender_mapping.py  test_i18n_anchors.py  test_persona_region_filter.py  test_price_sensitivity.py  test_report_gender_localization.py  test_score_calibration.py  test_ssr_engine.py  test_ssr_reference_parity.py
frontend/: main.py
(+2 files in other folders)
